--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.11.2",
         "admin-lte": "^3.0.0",
+        "datatables": "^1.10.18",
+        "dotenv": "^8.2.0",
         "laravel-vue-pagination": "^2.3.1",
         "moment": "^2.24.0",
         "sweetalert2": "^9.3.6",
         "vform": "^1.0.1",
         "vue-progressbar": "^0.7.5",
-        "vue-router": "^3.1.3"
+        "vue-router": "^3.1.3",
+        "vuex": "^3.1.2"
     }
 }
